:white_check_mark: [ADD] Module, Test about patient
Implement patient module and register Test  PASS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "noFallthroughCasesInSwitch": false,
     "resolveJsonModule": true,
     "paths": {
-      "@appointment/*": ["src/appointment/*"]
+      "@appointment/*": ["src/appointment/*"],
+      "@patient/*": ["src/patient/*"],
     }
   }
 }
