:bug: [FIX] Bug in tsconfig.json
Fix bug typo in paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "resolveJsonModule": true,
     "paths": {
       "@appointment/*": ["src/appointment/*"],
-      "@patient/*": ["src/patient/*"],
+      "@patient/*": ["src/patient/*"]
     }
   }
 }
